<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<group android:checkableBehavior="single">
		<item
			android:id="@+id/nav_home"
			android:icon="@drawable/ic_menu_camera"
			android:title="@string/nav_bar_home" />
		<item
			android:id="@+id/nav_history"
			android:icon="@drawable/ic_menu_gallery"
			android:title="@string/nav_bar_history" />
		<item
			android:id="@+id/nav_favorites"
			android:icon="@drawable/ic_menu_slideshow"
			android:title="@string/nav_bar_favorites" />
		<item
			android:id="@+id/nav_settings"
			android:icon="@drawable/ic_menu_manage"
			android:title="@string/nav_bar_settings" />
		<item
			android:id="@+id/nav_exit"
			android:icon="@drawable/ic_menu_send"
			android:title="@string/nav_bar_exit" />
	</group>

</menu>
