<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	android:id="@+id/item_history_request_card_view"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card_view="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginBottom="2dp"
	android:layout_marginTop="2dp"
	card_view:cardBackgroundColor="@android:color/secondary_text_dark_nodisable"
	card_view:cardCornerRadius="12dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/item_request_done"
			android:layout_width="wrap_content"
			android:layout_height="35dp"
			android:background="@drawable/request_button"
			android:text="@string/remove_selected_item_done" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:text="@string/msg_remove_selected_item" />

		<Button
			android:id="@+id/item_request_undo"
			android:layout_width="wrap_content"
			android:layout_height="35dp"
			android:layout_marginRight="12dp"
			android:background="@drawable/request_button"
			android:text="@string/remove_selected_item_undo" />

	</LinearLayout>

</android.support.v7.widget.CardView>
